# cepSolar

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/controllers/: cep_controller.rs
src/utils/: calculations.rs  helpers.rs
src/views/: output_view.rs
